<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="isInactive"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingBottom="@dimen/padding_16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_56"
                android:textSize="@dimen/text_size_18"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/authorization_sign_up"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_up_google_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/authorization_with_google_account"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_google_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextButton"
                app:icon="@drawable/ic_logo_google"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/padding_20"
                android:paddingHorizontal="@dimen/padding_16"
                android:elevation="@dimen/padding_1"
                android:text="@string/authorization_sign_up"
                android:layout_marginTop="@dimen/margin_8"
                android:contentDescription="@string/authorization_sign_up_with_google_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_google_title" />

            <View
                android:id="@+id/sign_up_left_divider"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/padding_1"
                android:background="@color/cornflower_blue"
                app:layout_constraintTop_toTopOf="@+id/sign_up_divider_title"
                app:layout_constraintBottom_toBottomOf="@+id/sign_up_divider_title"
                app:layout_constraintEnd_toStartOf="@+id/sign_up_divider_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_up_divider_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/authorization_or"
                android:paddingHorizontal="@dimen/padding_10"
                app:layout_constraintStart_toEndOf="@+id/sign_up_left_divider"
                app:layout_constraintEnd_toStartOf="@+id/sign_up_right_divider"
                app:layout_constraintTop_toBottomOf="@id/sign_up_google_auth" />

            <View
                android:id="@+id/sign_up_right_divider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/cornflower_blue"
                app:layout_constraintTop_toTopOf="@+id/sign_up_divider_title"
                app:layout_constraintBottom_toBottomOf="@+id/sign_up_divider_title"
                app:layout_constraintStart_toEndOf="@+id/sign_up_divider_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_divider_title">

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/authorization_email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email_container"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/authorization_password"
                    android:autofillHints="password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StrokeButtonStyle"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/authorization_signing_up"
                android:alpha="@{isInactive ? 0.5f : 1f}"
                android:enabled="@{!isInactive}"
                app:strokeColor="@color/selector_button_enable_bg"
                android:textColor="@{isInactive ? @color/inactive_bg : @color/white}"
                android:backgroundTint="@{isInactive ? @color/transparent : @color/button_bg}"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password_container" />

            <TextView
                android:id="@+id/sign_up_entrance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/padding_48"
                android:gravity="center"
                android:text="@string/authorization_entrance_title"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_continue" />

            <TextView
                android:id="@+id/sign_up_entrance"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_0"
                android:text="@string/authorization_entrance"
                android:gravity="center_vertical"
                android:textColor="@color/button_bg"
                android:paddingHorizontal="@dimen/padding_8"
                app:layout_constraintTop_toTopOf="@+id/sign_up_entrance_title"
                app:layout_constraintBottom_toBottomOf="@+id/sign_up_entrance_title"
                app:layout_constraintStart_toEndOf="@+id/sign_up_entrance_title"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>