<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainNavigation"
    app:startDestination="@+id/onBoardingFragment">

    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.authorization.onboarding.OnBoardingFragment">
        <action
            android:id="@+id/startLoginScreen"
...

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.tarasovvp.smartblocker.presentation.main.authorization.login.LoginFragment">
        <action
            android:id="@+id/startListBlockerFragment"
            app:destination="@id/listBlockerFragment"
            app:popUpTo="@+id/mainNavigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/startSignUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/startForgotPasswordDialog"
            app:destination="@id/forgotPasswordDialog" />
        <action
            android:id="@+id/startUnauthorizedEnterDialog"
            app:destination="@id/unauthorizedEnterDialog" />
...
